--- a/src/css/fontello.css
+++ b/src/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?28817074');
-  src: url('../font/fontello.eot?28817074#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?28817074') format('woff2'),
-       url('../font/fontello.woff?28817074') format('woff'),
-       url('../font/fontello.ttf?28817074') format('truetype'),
-       url('../font/fontello.svg?28817074#fontello') format('svg');
+  src: url('../font/fontello.eot?32546856');
+  src: url('../font/fontello.eot?32546856#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?32546856') format('woff2'),
+       url('../font/fontello.woff?32546856') format('woff'),
+       url('../font/fontello.ttf?32546856') format('truetype'),
+       url('../font/fontello.svg?32546856#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28817074#fontello') format('svg');
+    src: url('../font/fontello.svg?32546856#fontello') format('svg');
   }
 }
 */
@@ -58,6 +58,7 @@
 .icon-tint:before { content: '\e800'; } /* '' */
 .icon-air:before { content: '\e801'; } /* '' */
 .icon-gauge:before { content: '\f0e4'; } /* '' */
+.icon-sort-alt-up:before { content: '\f160'; } /* '' */
 .icon-sun:before { content: '\f185'; } /* '' */
 .icon-moon:before { content: '\f186'; } /* '' */
 .icon-thermometer-3:before { content: '\f2c8'; } /* '' */
